--- a/sites/all/themes/atelierstheme/sass/components/gallerie.scss
+++ b/sites/all/themes/atelierstheme/sass/components/gallerie.scss
@@ -1,6 +1,7 @@
 .atelier-gallerie {
 
-    width: 900px;
+    max-width: 900px;
+    width:100%;
     height: auto;
     margin: 100px auto 100px auto;
 
@@ -22,7 +23,8 @@
 
 .offres-speciales-gallerie {
 
-    width: 900px;
+    max-width: 900px;
+    width:100%;
     height: auto;
     margin: 100px auto 100px auto;
 
