--- a/sites/all/themes/atelierstheme/sass/components/global.scss
+++ b/sites/all/themes/atelierstheme/sass/components/global.scss
@@ -312,16 +312,27 @@ body {
         .liens {
 
             @include translate(-50%,-50%);
-            position:absolute;
 
             text-transform: uppercase;
             color: white;
 
-            width: 50vw;
+            text-align: center;
+
+            position: absolute;
+            left: 0;
+            right: 0;
+            margin-left: auto;
+            margin-right: auto;
 
             @include breakpoint($mobilel) {
 
-                width: 70vw;
+                width: 412px;
+
+            }
+
+            @include breakpoint($tablet) {
+
+                width: 75vw;
 
             }
 
