--- a/sites/all/themes/atelierstheme/sass/components/_atelier-actus.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_atelier-actus.scss
@@ -6,14 +6,7 @@
 
     .actus {
 
-//      border-bottom: 3px solid orange;
         margin: 50px 50px;
-
-//        @include breakpoint($laptop) {
-//
-//                height: 207px;
-//
-//        }
 
         .views-field-field-image {
 
@@ -46,14 +39,9 @@
         .views-field-created-1 {
 
             max-width:10000px;
-            //text-align: right;
 
-            @include breakpoint($laptop) {
-
-                float: right;
-                margin-top: -47px;
-
-            }
+            float: right;
+            margin-top: -47px;
 
             background-image: url("../images/calendrier.svg");
             background-repeat: no-repeat;
@@ -67,28 +55,13 @@
              display: block;
              color: white;
              font-size: 20px;
-             padding-top: 11px;
-             margin-top: 20px;
+//           padding-top: 11px;
+//           margin-top: 20px;
 
-            @include breakpoint($laptop) {
-
-                    margin-top: 11px;
-                    padding-top: 0px;
-
-                }
+            margin-top: 11px;
+            padding-top: 0px;
 
             }
-
-//            @include breakpoint($laptop) {
-//
-//                float: right;
-//
-//            }
-//
-//            width:150px;
-//            text-align: center;
-//            margin:30px 0;
-//            padding: 5px 25px;
 
         }
 
@@ -98,42 +71,14 @@
         margin-left:0px !important;
         margin-top: 10px;
 
-        @include breakpoint($laptop) {
-
-            text-align: right;
-            margin-top: 9px;
-
-        }
-
-        text-transform: uppercase;
-
-
-//            @include breakpoint($laptop) {
-//
-//                float: right;
-//
-//            }
-//
-//            width:150px;
-//            text-align: center;
-//            margin:30px 0;
-//            padding: 5px 25px;
-
-        }
-
-        .views-field-view-node  {
-
             @include breakpoint($laptop) {
 
-                float: right;
+                text-align: right;
+                margin-top: 9px;
 
             }
 
-            width:150px;
-            text-align: center;
-            margin:30px 0;
-            border: 1px solid black;
-            padding: 5px 25px;
+            text-transform: uppercase;
 
         }
 
