--- a/sites/all/themes/atelierstheme/sass/components/_global.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_global.scss
@@ -421,7 +421,11 @@ body {
 
         .views-field-field-image, img {
 
+            @include breakpoint($tablet) {
+
                 float: left;
+
+            }
 
         }
 
