--- a/sites/all/themes/atelierstheme/sass/atelierstheme.styles.scss
+++ b/sites/all/themes/atelierstheme/sass/atelierstheme.styles.scss
@@ -4,11 +4,12 @@
 //@import "abstractions/{YOUR FILE NAME HERE}";
 //@import "base/{YOUR FILE NAME HERE}";
 
-
-
+@import "atelierstheme.reset";
 @import "layouts/onecolumn.layout";
 @import "variables/variables";
 @import "variables/mixin";
+
+@import "components/menu";
 @import "components/imagetitle";
 @import "components/home";
 @import "components/presentation";
