--- a/sites/all/themes/atelierstheme/sass/components/_drop-down-menu.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_drop-down-menu.scss
@@ -31,8 +31,8 @@
 
             a {
 
-                line-height: 50px;
-                padding: 0 20px;
+                //line-height: 50px;
+                //padding: 0 20px;
                 //height: 80px;
                 //color: #777;
                 color:black;
