--- a/sites/all/themes/atelierstheme/sass/components/_home.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_home.scss
@@ -1,225 +1,104 @@
 @import "breakpoint";
 @import "../variables/variables";
-
 .picto_ateliers {
-
-    &:hover, &:link, &:active, &:visited {
+    &:hover,
+    &:link,
+    &:active,
+    &:visited {
         color: white;
     }
-
-    &.ilot_gourmand {
-
-        @include breakpoint($mobiles) {
-            margin: 0 12vw;
-        }
-
-        @include breakpoint($mobilem) {
-            margin: 0 12vw;
-        }
-
-        @include breakpoint($mobilel) {
-            margin: 0 12vw;
-        }
-
-        @include breakpoint($tablet) {
-            margin: 0 96px;
-        }
-
-        @include breakpoint($laptop) {
-            margin: 0 2vw;
-            margin-top: 3vw;
-        }
-
-    }
-
     img {
-
+        width:80%;
+        max-width:150px;
         height: auto;
-        width: 15vw;
-        @include breakpoint($tablet) {
-            width: 7.5em;
-        }
-        @include breakpoint($laptop) {
-            width: 9vw;
-        }
-        @include breakpoint($laptopl) {
-            width: 150px;
-            margin-top: 14px;
-        }
-
     }
-
 }
 
-.block-w {
-    color: white;
-    text-align: center;
-    position: absolute;
-    display: block;
-    background: rgba(255, 255, 255, 0.25);
-    left: 0;
-    right: 0;
-    padding-top: 30px;
-    margin-left: auto;
-    margin-right: auto;
-    @include breakpoint($mobiles) {
-        top: 80vw;
-        height: 358px;
-        width: 300px;
+.block-all {
+    position:relative;
+    .block-img {
+        width: 100%;
+        height: 100%;
+        background-size:cover;
+        background-position:center;
+        img{
+            display:none;
+            @include breakpoint($tablet){
+                display:block;
+            }
+        }
     }
-    @include breakpoint($mobilem) {
-        height: 350x;
-        width: 350px;
-    }
-    @include breakpoint($mobilel) {
-        height: 85vw;
-        width: 85vw;
-    }
-    @include breakpoint($tablet) {
-        top: 600px;
-        height: 650px;
-        width: 650px;
-    }
-    @include breakpoint($laptop) {
-        top: 7vw;
-        height: 23vw;
-        width: 76vw;
-    }
-    @include breakpoint($laptopl) {
-        top: 86px;
-        height: 350px;
-        width: 1200px;
-    }
-    .par-bienvenue {
-        font-family: 'SourceSansProLight';
-        font-size: 4vw;
-        margin: 10vw 0;
-        @include breakpoint($mobilem) {
+    .block-w {
+        color: white;
+        text-align: center;
+        display: block;
+        background: rgba(255, 255, 255, 0.25);
+        position:absolute;
+        top:50%;
+        left:50%;
+        width:100%;
+        transform : translate(-50%,-50%);
+        padding: 2rem;
+ 
+        .par-bienvenue {
+            font-family: 'SourceSansProLight';
             text-align: center;
-        }
-        @include breakpoint($laptop) {
-            text-align: left;
-        }
-        @include breakpoint($tablet) {
-            font-size: 30px;
-            margin: 80px 0;
-        }
-        @include breakpoint($laptop) {
-            font-size: 1.9vw;
-            margin: 5vw 3vw;
-            float: left;
-        }
-        @include breakpoint($laptopl) {
-            //float: left;
-            font-size: 31px;
-            margin: 50px 49px;
-        }
-    }
-    .title-bienvenue {
-        font-family: PermanentMarker;
-        font-size: 9vw;
-        @include breakpoint($tablet) {
-            font-size: 60px;
-        }
-        @include breakpoint($laptop) {
-            text-align: left;
-            margin: 0 3vw;
-            font-size: 3vw;
-        }
-        @include breakpoint($laptopl) {
-            margin: 0 50px;
-            font-size: 51px;
-        }
-    }
-    .container-title-pictos {
-        position: relative;
-        @include breakpoint($laptop) {
-            margin-top: 2vw;
-        }
-        @include breakpoint($laptopl) {
-            margin-top: 17px;
-        }
-        .title-pictos {
-            font-family: 'SourceSansProRegular';
-            text-transform: uppercase;
-            @include breakpoint($mobiles) {
-                position: absolute;
-                margin-top: 5vw;
-                &.auto_bleue {
-                    margin-left: 8vw;
-                }
-                &.menuiserie {
-                    margin-left: 34vw;
-                }
-                &.ilot_gourmand {
-                    margin-left: 60vw;
-                }
-                font-size: 2.5vw;
+            margin: 2rem 0;
+            @include breakpoint($tablet) {
+                text-align: left;
             }
-            @include breakpoint($mobilem) {
-                &.auto_bleue {
-                    margin-left: 8vw;
-                }
-                &.menuiserie {
-                    margin-left: 34vw;
-                }
-                &.ilot_gourmand {
-                    margin-left: 60vw;
-                }
-                font-size: 2.5vw;
-            }
-            @include breakpoint($mobilel) {
-                &.auto_bleue {
-                    margin-left: 8vw;
-                }
-                &.menuiserie {
-                    margin-left: 34vw;
-                }
-                &.ilot_gourmand {
-                    margin-left: 60vw;
-                }
-                font-size: 2.5vw;
+            
+        }
+        .title-bienvenue {
+            font-family: PermanentMarker;
+            font-size: 2rem;
+            @include breakpoint($mobilel){
+                 font-size: 2.5rem;
             }
             @include breakpoint($tablet) {
-                &.auto_bleue {
-                    margin-left: 59px;
-                }
-                &.menuiserie {
-                    margin-left: 267px;
-                }
-                &.ilot_gourmand {
-                    margin-left: 477px;
-                }
-                font-size: 17.48px;
+                font-size: 3rem;
             }
             @include breakpoint($laptop) {
-                margin-top: 1vw;
-                position: relative;
-                float: left;
-                margin: 0;
-                font-size: 1.3vw;
-                &.auto_bleue {
-                    margin-left: 2.5vw;
-                }
-                &.menuiserie {
-                    margin-left: 4vw;
-                }
-                &.ilot_gourmand {
-                    margin-left: 2.5vw;
-                }
+                text-align: left;
+                
             }
             @include breakpoint($laptopl) {
-                margin-top: 21px;
-                font-size: 21px;
-                &.auto_bleue {
-                    margin-left: 47px;
+                
+            }
+        }
+        .ateliers{
+            width:100%;
+            .atelier{
+                display:inline-block;
+                vertical-align: top;
+                width:100%;
+                text-align:center;
+                 @include breakpoint($mobilem){
+                      width:33.33%;
                 }
-                &.menuiserie {
-                    margin-left: 48px;
+            }
+            @include breakpoint($tablet){
+                width:50%;
+                margin:auto
+                    .atelier{
+                        img{
+                         width:50%;
+                        }    
+                    }
+                
+            }
+        }
+        .container-title-pictos {
+            position: relative;
+            .title-pictos {
+                font-family: 'SourceSansProRegular';
+                text-transform: uppercase;
+                @include breakpoint($mobiles) {
+                    position: absolute;
+                    margin-top: 5vw;
+                   
                 }
-                &.ilot_gourmand {
-                    margin-left: 39px;
-                }
+               
             }
         }
     }
@@ -237,25 +116,20 @@
     /* float: left; */
     left: 0;
     right: 0;
-
     @include breakpoint($mobiles) {
         width: 14em;
         top: 30vw;
         margin: 0 auto;
     }
-
     @include breakpoint($mobilem) {
         width: 16em;
     }
-
     @include breakpoint($mobilel) {
         width: 22em;
     }
-
     @include breakpoint($tablet) {
         width: 25em;
     }
-
     @include breakpoint($laptop) {
         display: none;
     }
@@ -265,96 +139,60 @@
     height: 9vw;
     background-color: white;
     display: none;
-    @include breakpoint($laptop){
+    @include breakpoint($laptop) {
         display: block;
     }
 }
 
 .home-body-actu {
-
     .actu {
-
-        padding:30px;
-
+        padding: 30px;
         .body_offres {
-
             display: block;
-
             @include breakpoint($tablet) {
                 display: inline-block;
-                width:49%;
+                width: 49%;
             }
-
             &.text-presentation {
-
-                padding:0;
-
+                padding: 0;
             }
-
         }
-
         .im_offres {
-
             display: block;
-            padding:0 0 0 20px;
-
+            padding: 0 0 0 20px;
             @include breakpoint($tablet) {
                 display: inline-block;
-                width:50%;
+                width: 50%;
                 position: absolute;
             }
-
         }
-
     }
-
 }
 
 .home-body-solidarite {
-
     .body_solidarite {
-
-        padding:30px;
+        padding: 30px;
         display: block;
-
         @include breakpoint($tablet) {
-
             display: inline-block;
-            width:49%;
-
+            width: 49%;
         }
-
         &.text-presentation {
-
-            padding:0;
-
+            padding: 0;
         }
-
     }
-
     .image_solidarite {
-
         display: block;
-        padding:0 0 0 20px;
-
+        padding: 0 0 0 20px;
         @include breakpoint($tablet) {
-
             display: inline-block;
-            width:50%;
+            width: 50%;
             position: absolute;
-
         }
-
     }
-
     .en_savoir_plus {
-
         border: solid 1px black;
-        color:black;
+        color: black;
         background-color: white;
-
     }
-
 }
-
-
