--- a/sites/all/themes/atelierstheme/sass/variables/_mixin.scss
+++ b/sites/all/themes/atelierstheme/sass/variables/_mixin.scss
@@ -3,3 +3,34 @@
     -webkit-transform : translate($x,$y);
     transform : translate($x,$y);
 }
+
+@mixin btn($color){
+    background-color: transparent;
+    cursor:pointer;
+    transition: all 200ms;
+    text-decoration: none;
+    display: inline-block;
+    text-transform: uppercase;
+    margin:30px 0;
+    padding: 10px 30px;
+    text-align: center;
+    
+    background-repeat: no-repeat;
+
+    background-size : 15% 40%;
+    background-position: 100% center;
+    color: #000000;
+    position: relative;
+    border : 2px solid #000000;
+    background-image : url(../images/f_noires/f_g_droite.svg);
+    
+    &:hover{
+        color: white;
+        background-color: $color;
+        border : 2px solid $color;
+        background-image : url(../images/f_blanches/f_droite.svg);
+       
+    }
+    
+    
+}
