--- a/sites/all/themes/atelierstheme/sass/variables/_mixin.scss
+++ b/sites/all/themes/atelierstheme/sass/variables/_mixin.scss
@@ -34,3 +34,13 @@
     
     
 }
+@mixin atelier(){
+    display:inline-block;
+    vertical-align: top;
+    width:100%;
+    text-align:center;
+     @include breakpoint($mobilem){
+          width:33.33%;
+    }
+    
+}
