--- a/sites/all/themes/atelierstheme/sass/components/_menu.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_menu.scss
@@ -1,7 +1,9 @@
 @import "singularitygs";
 @import "breakpoint";
 @import "../variables/variables";
+
 .l-header {
+
     .menu {
         $h: 100px;
         height: $h;
@@ -34,24 +36,126 @@
 }
 
 .l-off {
+
     .menu {
-        a {
-            color: white;
-        }
-        border: none;
+
+            a {
+                color: white;
+
+                &:hover, &:link, &:active, &:visited {
+                    text-decoration: none;
+                }
+
+                &.active {
+
+                    color:$green;
+
+                    &:hover {
+                        color:white;
+                    }
+
+                }
+
+            }
+
+            border: none;
             list-style: none;
             text-align: left;
-     margin-left: 4vw;font-size: 2.5vw;
-       
+             margin-left: 3rem;
+
         li.leaf {
-        margin-top: 14vw;
-        border-bottom: solid 1px white;
-        margin-top: 6vw;
-        border-bottom: solid 1px white;
-        padding-bottom: 20px;
-        list-style-type: none;
-        list-style-image: none;
-    } 
+
+            border-bottom: solid 1px white;
+            padding: 2rem 0 2rem 0;
+            list-style-type: none;
+            list-style-image: none;
+
+            &:hover {
+                background-color:$green;
+            }
+        }
+
+        li.expanded {
+
+            border-bottom: solid 1px white;
+            padding: 2rem 0 2rem 0;
+            list-style-type: none;
+            list-style-image: none;
+
+            &:hover {
+                background-color:$green;
+            }
+
+            ul {
+
+                &:hover {
+                    background-color:none;
+                }
+
+                li {
+
+                    font-size:0.9rem;
+                    border-bottom: none;
+
+                }
+
+            }
+
+        }
+
     }
+
+    @include breakpoint($laptop) {
+        //@include grid-span(6,1);
+        display: none;
+    }
+
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    -webkit-transition: all 375ms ease-in-out;
+    -moz-transition: all 375ms ease-in-out;
+    transition: all 375ms ease-in-out;
+    display: block;
+    @include breakpoint($mobilel){
+        width:70%;
+    }
+    &.h {
+        visibility: hidden;
+        left: -100%;
+    }
+    &.o {
+        left: 0px;
+    }
+    background-color: #4b4b4b;
+    text-transform: uppercase;
+
+
+.logo {
+        width: 10rem;
+        margin: 0 auto;
+        display: block;
+        margin-top: 3rem;
+    }
+
+    .reseaux {
+        display: block;
+        text-align: center;
+        padding-top: 2.5rem;
+        color:white;
+        font-size: 2rem;
+
+        img {
+            width: 2rem;
+            margin:0 2.5rem;
+        }
+
+    }
+
+}
+
+.l-off {
+
     
 }
