--- a/sites/all/themes/atelierstheme/sass/components/_menu.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_menu.scss
@@ -61,41 +61,74 @@
             border: none;
             list-style: none;
             text-align: left;
-             margin-left: 3rem;
+
 
         li.leaf {
 
-            border-bottom: solid 1px white;
-            padding: 2rem 0 2rem 0;
-            list-style-type: none;
-            list-style-image: none;
+                list-style-type: none;
+                list-style-image: none;
 
             &:hover {
                 background-color:$green;
             }
+
+            a {
+
+                border-bottom: solid 1px white;
+                padding: 2rem 0 2rem 0;
+                display: block;
+                margin-left: 3rem;
+                margin-right: 3rem;
+
+            }
+
         }
 
         li.expanded {
 
-            border-bottom: solid 1px white;
-            padding: 2rem 0 2rem 0;
             list-style-type: none;
             list-style-image: none;
 
             &:hover {
                 background-color:$green;
+
+                ul li {
+
+                    background-color: $grey;
+
+                }
+
+            }
+
+            a {
+
+                border-bottom: solid 1px white;
+                padding: 2rem 0 2rem 0;
+                display: block;
+                margin-left: 3rem;
+                margin-right: 3rem;
+
             }
 
             ul {
-
-                &:hover {
-                    background-color:none;
-                }
 
                 li {
 
                     font-size:0.9rem;
                     border-bottom: none;
+
+                    &:hover {
+
+                        background-color:$green;
+
+                    }
+
+                    a {
+
+                        border:none;
+                        margin-left: 6rem;
+
+                    }
 
                 }
 
