--- a/sites/all/themes/atelierstheme/sass/components/_menu.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_menu.scss
@@ -45,10 +45,12 @@
 
                     @include breakpoint($laptop) {
                         font-size: 0.9rem;
+                        margin: 0;
                     }
 
                     @include breakpoint($laptopl) {
                         font-size: 1.1rem;
+                        margin: 0;
                     }
 
                 }
@@ -128,6 +130,7 @@
 
             list-style-type: none;
             list-style-image: none;
+            position: relative;
 
             a {
 
