--- a/sites/all/themes/atelierstheme/sass/components/_menu.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_menu.scss
@@ -93,6 +93,7 @@
                     margin-left: auto;
                     margin-right: auto;
                     right: 0;
+                    left:0;
 
                     //margin-left: -48px;
 
