--- a/sites/all/themes/atelierstheme/sass/components/_ateliers.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_ateliers.scss
@@ -17,7 +17,7 @@
         width: 50%;
 
         margin-top: -67px;
-        z-index: 100000;
+        //z-index: 100000;
 
         position: relative;
 
@@ -196,17 +196,12 @@
     }
 
     .contact {
+
         @include btn($green);
-        /*
-        text-transform: uppercase;
-        //background-color: #f7941d;
-        color: white;
-        padding: 11px;
-        width: 233px;
+        margin-left:auto;
+        margin-right: auto;
         display: block;
-        margin: 30px auto;
-        text-align: center;
-        */
+
     }
 
     .atelier-header-bg-web {
@@ -232,5 +227,26 @@
         background-color: #f7941d;
     }
 
+    .atelier-color {
+
+        &.text-presentation {
+
+            margin-top:10px;
+
+            @include breakpoint($laptop) {
+
+                margin-top:20px;
+
+            }
+
+            @include breakpoint($laptopl) {
+
+                margin-top:30px;
+
+            }
+
+        }
+
+    }
 
 }
