--- a/sites/all/themes/atelierstheme/sass/components/_gallerie.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_gallerie.scss
@@ -1,6 +1,7 @@
 .atelier-gallerie {
 
-    width: 900px;
+    max-width: 900px;
+    with:100%;
     height: auto;
     margin: 100px auto 100px auto;
 
