--- a/sites/all/themes/atelierstheme/sass/components/_global.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_global.scss
@@ -319,50 +319,34 @@ body {
             text-align: center;
 
             position: absolute;
-            left: 0;
+
+            left: 50%;
             right: 0;
+            top:93%;
+
             margin-left: auto;
             margin-right: auto;
 
-            @include breakpoint($mobilel) {
-
-                width: 412px;
-
-            }
-
-            @include breakpoint($tablet) {
-
-                width: 75vw;
-
-            }
-
-            @include breakpoint($laptop) {
-
-                width: 80vw;
-
-            }
-
-             @include breakpoint($laptopl) {
-
-                width: 90vw;
-
-            }
-
-            z-index: 1000000;
+            //z-index: 1000000;
             font-size: 20px;
-
-            top: 90%;
-            left: 69%;
 
             a {
 
                 color:white;
+                text-decoration: none;
 
             }
 
             .actualites {
 
-                float: right;
+                @include grid-span(6,1);
+
+            }
+
+
+            .services {
+
+                @include grid-span(6,7);
 
             }
 
@@ -384,27 +368,22 @@ body {
 
             }
 
-            font-size:20px;
+            font-size:14px;
 
             @include breakpoint($mobilel) {
 
-                    top: 92%;
-                    left: 69%;
                     font-size: 20px;
 
             }
 
             @include breakpoint($laptop) {
 
-                top: 93%;
-                left: 52%;
                 font-size: 28px;
 
             }
 
              @include breakpoint($laptopl) {
 
-                top: 93%;
                 font-size: 30px;
 
             }
