--- a/sites/all/themes/atelierstheme/sass/variables/_mixin.scss
+++ b/sites/all/themes/atelierstheme/sass/variables/_mixin.scss
@@ -11,7 +11,20 @@
     text-decoration: none;
     display: inline-block;
     text-transform: uppercase;
-    margin:30px 0;
+    margin:20px 0;
+
+    @include breakpoint($laptop) {
+
+        margin-top:30px;
+
+    }
+
+    @include breakpoint($laptopl) {
+
+        margin-top:40px;
+
+    }
+
     padding: 10px 30px;
     text-align: center;
     
