--- a/sites/all/themes/atelierstheme/sass/components/_don.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_don.scss
@@ -3,9 +3,11 @@
 @import "../variables/mixin";
 
 .bloc_don {
+
     background-color:$lightgrey;
     padding:1rem;
-    .inner{
+
+    .inner {
         margin : auto;
         max-width:$tablet;
        
@@ -14,11 +16,9 @@
         color: #9D2537;
         text-align: center;
         .don-img {
+
             @include grid-span(2,1);
-            @include breakpoint($tablet) {
 
-
-            }
         }
 
         .don-txt {
@@ -32,15 +32,31 @@
             }
            
         }
-        .don-btn{
-            @include grid-span(2,11);
-            a{
+
+        .don-btn {
+
+            @include breakpoint($laptop) {
+
+                @include grid-span(2,11);
+
+            }
+
+            a {
 
                 @include btn(#9D2537);
+
+                margin: 120px 0 0 0;
+                width: 300px;
+
+                @include breakpoint($laptop) {
+
+                    margin:20px 0;
+                    width: 200px;
+
+                }
             }
         }
     }
-
 }
 
 
