--- a/sites/all/themes/atelierstheme/sass/components/_swiper.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_swiper.scss
@@ -17,7 +17,7 @@
   position: relative;
   overflow: hidden;
   /* Fix of Webkit flickering */
-  z-index: 1;
+  //z-index: 1;
 }
 .swiper-container-no-flexbox .swiper-slide {
   float: left;
@@ -33,7 +33,7 @@
   position: relative;
   width: 100%;
   height: 100%;
-  z-index: 1;
+  //z-index: 1;
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
@@ -121,7 +121,7 @@
   width: 27px;
   height: 44px;
   margin-top: -22px;
-  z-index: 10;
+  //z-index: 10;
   cursor: pointer;
   -moz-background-size: 27px 44px;
   -webkit-background-size: 27px 44px;
@@ -175,7 +175,7 @@
   -ms-transform: translate3d(0, 0, 0);
   -o-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
-  z-index: 10;
+  //z-index: 10;
 }
 .swiper-pagination.swiper-pagination-hidden {
   opacity: 0;
