--- a/sites/all/themes/atelierstheme/sass/layouts/_onecolumn.layout.scss
+++ b/sites/all/themes/atelierstheme/sass/layouts/_onecolumn.layout.scss
@@ -176,17 +176,33 @@ a {
         font-size: 1.5vw;
     }
     .reseaux {
-        position: absolute;
-        left: 90%;
-        right: 0;
-        top: 41%;
+//        position: absolute;
+//        left: 90%;
+//        right: 0;
+//        top: 41%;
         img {
-            width: 3vw;
+            width: 2vw;
             margin-right: 1vw;
-            @include breakpoint($laptop) {
-                width: 2vw;
+            @include breakpoint($laptopl) {
+                width: 1.75rem;
+                margin-right: 1.75rem;
             }
         }
+
+        @include grid-span(1, 12);
+
+    }
+
+    .footer-menu {
+
+        @include grid-span(11, 1);
+
+    }
+
+    a {
+
+        text-decoration: none;
+
     }
 }
 
