--- a/sites/all/themes/atelierstheme/sass/layouts/_onecolumn.layout.scss
+++ b/sites/all/themes/atelierstheme/sass/layouts/_onecolumn.layout.scss
@@ -168,18 +168,49 @@ a {
     .menu {
         text-align: center;
         li {
-            content: "|";
             display: inline;
+
+            a {
+
+                &:hover {
+                    color:white;
+                }
+
+            }
         }
+
     }
     @include breakpoint($laptop) {
         font-size: 1.5vw;
     }
+
+    .footer-menu {
+
+        .leaf {
+
+            &:after {
+
+                content:"  | ";
+                padding:0 15px;
+                font-size:1.5rem;
+
+            }
+
+            &.last {
+
+                &:after {
+
+                    content:"";
+
+                }
+            }
+        }
+    }
+
     .reseaux {
-//        position: absolute;
-//        left: 90%;
-//        right: 0;
-//        top: 41%;
+
+
+
         img {
             width: 2vw;
             margin-right: 1vw;
@@ -190,6 +221,56 @@ a {
         }
 
         @include grid-span(1, 12);
+
+        .twitter-img {
+
+            background: url("../images/twitter_vert.svg") no-repeat;
+            background-position: bottom;
+            height:2vw;
+            width:2vw;
+            float: left;
+
+            &:hover {
+
+                background: url("../images/twitter_blanc.svg") no-repeat;
+                background-position: bottom;
+
+            }
+
+            margin-left: 30px;
+
+            @include breakpoint($laptop) {
+                margin-left: 45px;
+            }
+
+            @include breakpoint($laptopl) {
+                width: 1.75rem;
+                margin-right: 1.75rem;
+                margin-left: 60px;
+            }
+
+        }
+
+        .linkedin-img {
+
+            background: url("../images/linkedin_vert.svg") no-repeat;
+            background-position: bottom;
+            height:2vw;
+            width:2vw;
+
+            &:hover {
+
+                background: url("../images/linkedin_blanc.svg") no-repeat;
+                background-position: bottom;
+
+            }
+
+            @include breakpoint($laptopl) {
+                width: 1.75rem;
+                margin-right: 1.75rem;
+            }
+
+        }
 
     }
 
